--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -57,11 +57,23 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   color: lightslategray;
+  cursor: pointer;
+  transition: transform 0.2s, ease;
 }
 
 .input-container button {
   color: black;
   margin-top: 30px;
+}
+
+.input-container input:hover, 
+.input-container button:hover {
+  transform: scale(1.05);
+}
+
+.input-container button:active {
+  background-color: darkgray;
+  color: white;
 }
 
 .error-message {
